deploy/template.yml
Resources:
  BlogSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP, HTTPS, and SSH
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 0.0.0.0/0

  BlogInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0360c520857e3138f  # Ubuntu 24.04 LTS
      SecurityGroupIds:
        - !Ref BlogSecurityGroup
      KeyName: auth
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt-get update -y
          apt-get install -y docker.io git
          apt-get install nginx -y
          systemctl start nginx
          systemctl enable nginx
          systemctl start docker
          usermod -aG docker ubuntu
          curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
          chmod +x /usr/local/bin/docker-compose
          cd /home/ubuntu
          git clone https://github.com/tioluu/andrewblog.git
          cd andrewblog
          docker-compose up -d --build

Outputs:
  InstancePublicIP:
    Description: Public IP of EC2 instance
    Value: !GetAtt BlogInstance.PublicIp
